--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ NODE_ENV=DEVELOPMENT
 
 PORT=3333
 
-DEVELOPMENT=mongodb://127.0.0.1:27017/mobile
+DEVELOPMENT=mongodb://127.0.0.1:27017/smartkids
 PRODUCTION=
 
 TOKEN_DURATION=24h
