--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-NODE_ENV=DEVELOPMENT
+NODE_ENV=PRODUCTION
 
 PORT=3333
 
 DEVELOPMENT=mongodb://127.0.0.1:27017/smartkids
-PRODUCTION=
+PRODUCTION=mongodb+srv://smartkids:Azerty123456@smartkidscluster.kphhb.mongodb.net/smartkids?retryWrites=true&w=majority
 
 TOKEN_DURATION=24h
 PRIVATE_KEY=master.p1.mobile.project
